syntax = "proto3";
package protomsg;
import "msg_common.proto";
import "msg_common_map.proto";
import "msg_common_scout.proto";

//////////////////////////////////////////////////////////////////////////
///  player map view module 开始
//////////////////////////////////////////////////////////////////////////

message MsgCL2GSViewMapRequest
{
  uint64 region_id = 1;
  uint32 kingdom_id = 2; 
  vector2d position = 4;
  uint32   view_lod = 5;
}

message MsgGS2CLViewMapReply
{
  uint64 region_id = 1;
  uint32 kingdom_id = 2; 
  vector2d position = 4;
  uint32   view_lod = 5;

	int32	error_code		= 99;
}

message MsgCL2GSRemoveViewRequest
{
}

message MsgGS2CLRemoveViewReply
{
	int32	error_code		= 99;
}

message MsgGS2CLSyncEntitiesDataNotice
{
  uint32   view_lod  = 1;
  bytes    sync_data = 2;
  uint64 region_id = 3;
}
message MsgGS2CLSyncEntitiesDataRemoveNotice
{
  uint32   view_lod = 1;
  repeated uint64 entity_ids = 2;
  uint64 region_id = 3;
}

message MsgGS2CLEntityMoveCrileNotice
{
  uint64 entity_id = 1;
  repeated vector2d paths = 2;
}

message MsgGS2CLEntityMovePathNotice
{
  uint64 entity_id = 1;
  repeated vector2d paths = 2;
}

message MsgGS2CLMarchCommandUpdateNotice
{
  uint64 entity_id = 1;
  protomsg.MarchCommand command = 2;
}

message MsgGS2CLEntityStopMoveNotice
{
  uint64 entity_id = 1;
  vector2d pos     = 2;
}

message MsgGS2CLEntityUpdateMovePathNotice
{
  uint64 entity_id  = 1;
  vector2d cur_pos  = 2;
  vector2d path_pos = 3;
}

message MsgGS2CLScoutCommandUpdateNotice
{
  uint64 entity_id = 1;
  protomsg.ScoutCommand command = 2;
}

message MsgGS2CLEntityUpdateMoveSpeedNotice
{
  uint64 entity_id = 1;
  vector2d pos     = 2;
  int64 speed      = 3;    // 行军速度
}

message MsgGS2CLMarchStationedInNotice
{
  uint64 march_entity_id      = 1;
  uint64 stationed_entity_id  = 2;
  vector2d pos                = 3;
}

message MsgGS2CLMarchOutStationedNotice
{
  uint64 march_entity_id      = 1;
  uint64 stationed_entity_id  = 2;
  vector2d pos                = 3;
}


//////////////////////////////////////////////////////////////////////////
///  player map view module 结束
//////////////////////////////////////////////////////////////////////////